# lore-genome

./: .gitignore  README.md  config.template.yaml  config.yaml  pyproject.toml  requirements.txt  run.bat  run.py  run.sh  setup.py  test.py  thing
cli/: main.py
debug/: debug_app.py
lore/: __init__.py  __main__.py  cli.py  dsl.py
lore/adapters/: __init__.py  fasta.py  json.py  mmseqs.py  ncbi.py  png.py  svg.py  table.py
lore/builtins/: __init__.py
lore/builtins/adapters/: __init__.py  fasta.py  mmseqs.py  ncbi.py  png.py  svg.py
lore/builtins/workflows/: rtx_adhesin_clustering_pipeline.json
lore/core/: adapters.py  artifacts.py  bindings.py  cache.py  executor.py  filelock.py  io.py  manifest.py  paths.py  plugins.py  runtime.py  session.py  settings.py  tasks.py  utils.py  workflow.py
lore/core/artifacts/: __init__.py  manager.py  models.py
lore/core/execution/: __init__.py  context.py  executors.py  materializer.py  orchestrator.py  resolver.py  worker.py
lore/core/pipeline/: __init__.py  matcher.py  resolver.py
lore/core/sessions/: __init__.py  matcher.py  resolver.py  session.py
lore/core/tasks/: __init__.py  dsl.py  models.py  parameters.py  registry.py
lore/core/topology/: __init__.py  diagram.py  matcher.py  traits.py  traversal.py
lore/core/utils/: __init__.py  dict_path.py  pandas.py  pydantic.py  strings.py
lore/core/workflows/: dag.py  diagram.py  manager.py  models.py  resolver.py
lore/debug/: __init__.py  debug_app.py
lore/parsing/: ncbi.py
lore/plugins/: example.py
lore/tasks/: __init__.py  cluster_analysis.py  filter.py  genomic_neighbourhood.py  mmseqs.py  ncbi.py  sampling.py
lore/tasks/clustering/: genomic_neighbourhood.py  mmseqs.py
lore/utils/: parse.py
lore/viz/: __init__.py  graph.py  svg.py
lore/web/: api.py  app.py  asgi.py  deps.py  utils.py
pipeline/: __init__.py  api_functions.py  caching.py  config.py  filters.py  io_functions.py  main.py  pipeline.py  summary.py  user.py  utils.py  viz.py
scripts/: __init__.py  cluster_details.py  cluster_to_fasta.py  clusters_report.py  protein_report.py
tests/: conftest.py  test_core.py
tests/builtins/: test_tasks.py
tests/core/: test_adapters.py  test_cache.py  test_filelock.py  test_io.py  test_plugins.py  test_runtime.py  test_settings.py
tests/web/: conftest.py  test_api.py
wheels/: ncbi_datasets_pylib-1.0.0-py3-none-any.whl
(+102 files in other folders)
