[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lore-genome"
version = "0.2.0"
dependencies = [
    "click>=8.0.0",
    "fastapi>=0.70.0",
    "jinja2>=3.0.0",
    "uvicorn[standard]>=0.15.0",
    "pandas>=2.3.2",
    "pydantic>=2.7.2",
    "rich>=13.3.4",
    "platformdirs",
]
requires-python = ">=3.10"
authors = [{name = "Thomas Hansen"}]
description="A tool for comparitive genomics analysis and visualization."
readme = "README.md"
license = "MIT"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]

[project.scripts]
lore = "lore.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["lore*"]
exclude = ["wheels*", "test*"]

[tool.setuptools.package-data]
"lore.web" = ["templates/**/*.html", "static/**/*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = [
    "test*.py",
]
pythonpath = "."