[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lore-genome"
version = "0.3.2"
dependencies = [
    "click>=8.0.0",
    "fastapi>=0.135.0",
    "httpx>=0.27.0",
    "jinja2>=3.0.0",
    "uvicorn[standard]>=0.15.0",
    "pandas>=2.3.2",
    "pydantic>=2.0",
    "platformdirs",
    "python-multipart>=0.0.9",
]
requires-python = ">=3.10"
authors = [{name = "Thomas Hansen"}]
description="An extensible workflow orchestrator engine for bioinformatics."
readme = "README.md"
license = "MIT"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=3.0.0",
]

[project.scripts]
lore = "lore.cli:main"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["lore*"]
exclude = ["wheels*", "tests*"]

[tool.setuptools.package-data]
"lore.web" = ["templates/**/*.html", "static/**/*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -v --color=yes"
testpaths = ["tests"]
python_files = ["test*.py"]
pythonpath = "."